slurm-127432_1.out
  File "unitConversionCandyGum.py", line 7
    if product = 'CANDY':
               ^
SyntaxError: invalid syntax
